# projetIN204

./: .gitignore  CMakeLists.txt  README.md  Vector3.hpp  main.cpp  test_camera
SceneFromJson/: CornellLike.json  Scene01.json  Scene02.json  Scene03.json  Scene04.json
dependencies/: libs.hpp
dependencies/Camera/cpp/: Camera.cpp
dependencies/Camera/hpp/: Camera.hpp
dependencies/RTMotors/cpp/: ParallelRenderer.cpp  RTMotor.cpp  RTMotor.cpp.old  RTMotorOpenMP.cpp  SimpleRenderer.cpp
dependencies/RTMotors/hpp/: ParallelRenderer.hpp  RTMotor.hpp  Renderer.hpp  SimpleRenderer.hpp
dependencies/Scene/cpp/: scene.cpp
dependencies/Scene/hpp/: scene.hpp
dependencies/camera/cpp/: Camera.cpp  _Camera.cpp
dependencies/camera/hpp/: Camera.hpp  Ray.hpp  _Camera.hpp
dependencies/lights/cpp/: DirectionalLight.cpp  Light.cpp  SpotLight.cpp
dependencies/lights/hpp/: DirectionalLight.hpp  Light.hpp  Light_list.hpp  PointLight.hpp  SpotLight.hpp
dependencies/materials/cpp/: Dielectric.cpp  Lambertian.cpp  Metal.cpp
dependencies/materials/hpp/: Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp  Texture.hpp  _Texture.hpp
dependencies/objects/cpp/: Cone.cpp  Cylinder.cpp  Plan.cpp  Triangle.cpp  Vector3.cpp
dependencies/objects/hpp/: Cone.hpp  Cylinder.hpp  Mesh.hpp  Parallepiped.hpp  Plan.hpp  Sphere.hpp  Triangle.hpp  Vector3.hpp  _AABB.hpp  _Generic.hpp  _Hittable_object_list.hpp  _bvh_node.hpp
dependencies/scene/cpp/: Sceneloader.cpp  scene.cpp
dependencies/scene/hpp/: Sceneloader.hpp  scene.hpp
dependencies/utils/cpp/: Camera.cpp  Image.cpp  Vector3.cpp  color.cpp  scene.cpp
dependencies/utils/hpp/: Camera.hpp  Color.hpp  Image.hpp  Point3.hpp  Ray.hpp  Vector3.hpp  interval.hpp  scene.hpp
interface /inlcude_/: sdl_window.hpp
rendering/: CApp.cpp  CApp.hpp  RayTracerApp.cpp  RayTracerApp.hpp
